# NumC

./: .gitignore  CMakeLists.txt  README.md
doc/: Doxyfile  Doxygen-Main.md
doc/html/: CIterator_8hpp.html  CIterator_8hpp__dep__incl.map  CIterator_8hpp__dep__incl.md5  CIterator_8hpp__incl.map  CIterator_8hpp__incl.md5  CIterator_8hpp_source.html  ContainerUtils_8hpp.html  ContainerUtils_8hpp__dep__incl.map  ContainerUtils_8hpp__dep__incl.md5  ContainerUtils_8hpp__incl.map  ContainerUtils_8hpp__incl.md5  ContainerUtils_8hpp_source.html  Core_2CMakeLists_8txt.html  Core_2Iterator_2CMakeLists_8txt.html  Core_2View_2CMakeLists_8txt.html  Doxygen-Main_8md.html  Iterator_8hpp.html  Iterator_8hpp__dep__incl.map  Iterator_8hpp__dep__incl.md5  Iterator_8hpp__incl.map  Iterator_8hpp__incl.md5  Iterator_8hpp_source.html  MemoryIndexer_8hpp.html  MemoryIndexer_8hpp__dep__incl.map  MemoryIndexer_8hpp__dep__incl.md5  MemoryIndexer_8hpp__incl.map  MemoryIndexer_8hpp__incl.md5  MemoryIndexer_8hpp_source.html  NdArray_8hpp.html  NdArray_8hpp__dep__incl.map  NdArray_8hpp__dep__incl.md5  NdArray_8hpp__incl.map  NdArray_8hpp__incl.md5  NdArray_8hpp_source.html  NumC_8hpp.html  NumC_8hpp__incl.map  NumC_8hpp__incl.md5  NumC_8hpp_source.html  ReshapedView_8hpp.html  ReshapedView_8hpp__dep__incl.map  (+154 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  files_0.js  files_1.js  files_2.js  files_3.js  (+34 more)
examples/: CMakeLists.txt  build.sh  example1.cpp
src/: CMakeLists.txt  NumC.hpp  main.cpp
src/NumC/Core/: CMakeLists.txt  Iterator.hpp  NdArray.hpp  Type.hpp
src/NumC/Core/Iterator/: CIterator.hpp  CMakeLists.txt  Iterator.hpp  MemoryIndexer.hpp  ViewIterator.hpp
src/NumC/Core/View/: CMakeLists.txt  ReshapedView.hpp  SlicedView.hpp  TransposedView.hpp  View.hpp
src/NumC/Utils/: CMakeLists.txt  ContainerUtils.hpp  StringUtils.hpp
